--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,9 @@
                 {% endif %}
               {% endfor %}
               <li>
+                <a class="page-link" href="http://cfp.uikonf.com/" target="_blank">Call for Proposals</a>
+              </li>
+              <li>
                 <a class="page-link" href="{{ '/blog' | prepend: site.baseurl }}">Blog</a>
               </li>
               <li>
