--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,11 @@
           <ul class="uk-navbar-nav uk-hidden-small uk-navbar-flip">
               {% for my_page in site.pages %}
                 {% if my_page.title %}
+				{% if my_page.title != "Social Events" %}
                 <li>
                   <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
                 </li>
+				{% endif %}
                 {% endif %}
               {% endfor %}
               <li>
