--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,18 +6,17 @@
           <img src="{{ site.baseurl }}/static/images/Logo.png" alt="logo UIKonf">
         </a>
           <ul class="uk-navbar-nav uk-hidden-small uk-navbar-flip">
-              {% for my_page in site.pages %}
+			{% assign sorted_pages = site.pages | sort:"order" %}
+              {% for my_page in sorted_pages %}
                 {% if my_page.title %}
 				{% if my_page.title != "Social Events" %}
+				
                 <li>
                   <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
                 </li>
 				{% endif %}
                 {% endif %}
               {% endfor %}
-              <li>
-                <a class="page-link" href="http://cfp.uikonf.com/" target="_blank">Call for Proposals</a>
-              </li>
               <li>
                 <a class="page-link" href="{{ '/blog' | prepend: site.baseurl }}">Blog</a>
               </li>
