--- a/_sass/_diagonal_elements.scss
+++ b/_sass/_diagonal_elements.scss
@@ -149,7 +149,7 @@
 
 	margin-bottom: 10px !important;
 	position: relative;
-	padding: 40px 10px;
+	padding: 20px 10px 30px;
 
 	& + p {
 		padding: 0 10px;
