--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,9 @@
               <li>
                 <a class="page-link" href="{{ '/blog' | prepend: site.baseurl }}">Blog</a>
               </li>
+			  <li>
+				 <a class="page-link btn" href="https://ti.to/uikonf/uikonf-2017" target="_blank">Tickets</a>
+			  </li>
           </ul>
           <ul class="uk-navbar-nav uk-visible-small uk-navbar-flip">
             <li>
@@ -40,6 +43,9 @@
               <li>
                 <a class="page-link" href="{{ '/blog' | prepend: site.baseurl }}">Blog</a>
               </li>
+			  <li>
+				 <a class="page-link" href="https://ti.to/uikonf/uikonf-2017" target="_blank">Tickets</a>
+			  </li>
           </ul>
         </div>
     </div>
