Add new speaker bios, link CfP in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,9 @@
               <li>
                 <a class="page-link" href="{{ '/blog' | prepend: site.baseurl }}">Blog</a>
               </li>
+              <li>
+                <a class="page-link" href="http://cfp.uikonf.com" target="_blank">Call for Proposals</a>
+              </li>
 			  <li>
 				 <a class="page-link btn" href="https://ti.to/uikonf/uikonf-2017" target="_blank">Tickets</a>
 			  </li>
