--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,9 +17,9 @@
               <li>
                 <a class="page-link" href="{{ '/blog' | prepend: site.baseurl }}">Blog</a>
               </li>
-              <!-- <li>
+              <li>
                 <a class="page-link" href="http://cfp.uikonf.com" target="_blank">Call for Proposals</a>
-              </li> -->
+              </li>
 			  <li>
 				 <a class="page-link btn" href="https://ti.to/uikonf/uikonf-2018" target="_blank">Tickets</a>
 			  </li>
@@ -43,6 +43,9 @@
               {% endfor %}
               <li>
                 <a class="page-link" href="{{ '/blog' | prepend: site.baseurl }}">Blog</a>
+              </li>
+              <li>
+                <a class="page-link" href="http://cfp.uikonf.com" target="_blank">Call for Proposals</a>
               </li>
 			  <li>
 				 <a class="page-link" href="https://ti.to/uikonf/uikonf-2018" target="_blank">Tickets</a>
