modularize content, remove GA, add social meta tags, update ticket links

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,9 @@
 layout: default
 ---
 
-<div class="headerimage small" style="background-image: url({{ site.baseurl }}/static/images/news_image.jpg);" data-uk-parallax="{bg: '-50'}">
-</div>
+{% include header-image.md image="news_image.jpg" title=page.title %}
 
-<div class="backshape">
+<div class="straight">
 	<div class="wrapper">
 	</div>
 </div>
