--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="google-site-verification" content="svrTp8KT89Q4O8EuVeWpPfUIcmKV9krk97YQtIIRqyw" />
+    
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+
+    <meta name="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+    <meta name="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+    <meta name="og:image" content="{{ site.baseurl }}/static/images/uikonf-2018.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@uikonf">
 
     <link rel="stylesheet" href="{{ "/components/uikit/css/uikit.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
