--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
                 <a class="page-link" href="http://cfp.uikonf.com" target="_blank">Call for Proposals</a>
               </li> -->
 			  <li>
-				 <a class="page-link btn" href="https://ti.to/uikonf/uikonf-2018" target="_blank">Tickets</a>
+				 <a class="page-link btn" href="{{ site.ticket_url }}" target="_blank">Tickets</a>
 			  </li>
           </ul>
           <ul class="uk-navbar-nav uk-visible-small uk-navbar-flip">
@@ -48,7 +48,7 @@
                 <a class="page-link" href="http://cfp.uikonf.com" target="_blank">Call for Proposals</a>
               </li> -->
 			  <li>
-				 <a class="page-link" href="https://ti.to/uikonf/uikonf-2018" target="_blank">Tickets</a>
+				 <a class="page-link" href="{{ site.ticket_url }}" target="_blank">Tickets</a>
 			  </li>
           </ul>
         </div>
