--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,9 +7,9 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
-    <meta name="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-    <meta name="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-    <meta name="og:image" content="{{ site.baseurl }}/static/images/uikonf-2018.jpg">
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+    <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+    <meta property="og:image" content="{{ site.baseurl }}/static/images/uikonf-2018.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@uikonf">
 
