--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -59,7 +59,7 @@
         <div class="uk-width-1-1 uk-margin-large-top">
 			<p><small><a href="{{ site.baseurl }}/imprint">Imprint</a></small></p>
       <p><small><a href="https://smallprint.tito.io/uikonf/uikonf-2019">Data Protection</a></small></p>
-      <p><small><a href="http://www.uikonf.com/coc/">Code of Conduct</a></small></p>
+      <p><small><a href="{{ site.baseurl }}/coc/">Code of Conduct</a></small></p>
           <p><small><a href="http://www.fifteenjugglers.com">Fifteen Jugglers Software UG</a>, Grossbeerenstr. 79, 10963 Berlin. HRB127623B, <br>
               USt.-ID: DE271966472</small></p>
         </div>        
