--- a/_sass/_diagonal_elements.scss
+++ b/_sass/_diagonal_elements.scss
@@ -12,6 +12,18 @@
   }
 }
 
+.headerimage-home {
+  background: $brand-color;
+  height:800px;
+  width:100%;
+  background-size:cover;
+
+  &.small {
+  	height: 339px;
+  }
+}
+
+
 .backshape {
   z-index:3;
   position: relative;
