fancy header background

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -79,7 +79,7 @@ article.author-post-first {
 	color: white;
 }
 
-.teaser-register  {
+.teaser  {
 	text-align: center;
 	margin-top: -100px;
 	a.btn {
@@ -100,3 +100,26 @@ article.author-post-first {
 	}
 }
 
+.teaser-register  {
+	text-align: center;
+	margin-top: -100px;
+	background: rgba(0,0,0,0.5);
+	padding: 40px;
+	border-radius: 16px;
+	a.btn {
+		display: block;
+		margin: 40px 0 10px;
+		color: white;
+		border-color: white;
+		font-size: 140%;
+		padding: 6px 0;
+
+		&:hover, &:focus {
+			text-decoration: none;
+			border-color: $brand-color;
+		}
+	}
+	h1, p, a {
+		color: white;
+	}
+}
