update mytaxi apge

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -123,3 +123,27 @@ article.author-post-first {
 		color: white;
 	}
 }
+
+.teaser-light  {
+	text-align: center;
+	margin-top: -100px;
+	background: rgba(255,255,255,0.5);
+	padding: 40px;
+	border-radius: 16px;
+	a.btn {
+		display: block;
+		margin: 40px 0 10px;
+		color: white;
+		border-color: white;
+		font-size: 140%;
+		padding: 6px 0;
+
+		&:hover, &:focus {
+			text-decoration: none;
+			border-color: $brand-color;
+		}
+	}
+	h1, p, a {
+		color: white;
+	}
+}
