add mytaxi to schedule

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,7 @@ $light-text-color: rgba(74,74,74, 0.7);
 
 $background-color: #fff;
 $brand-color:      #009FDF;
+$mytaxi-color:     #fdc300;
 
 $light-grey: 		#F5F5F5;
 $grey-color:       rgb(74,74,74);
