--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,56 +1,43 @@
-<div class="newsletter backshape grey-color">
-  <div class="wrapper">
-    <div class="uk-container uk-container-center">
-      <div class="uk-grid">
-        <div class="uk-width-medium-8-10 uk-container-center">
-          <div class="uk-grid uk-margin-large-top">
-            <div class="uk-width-1-1 uk-text-center">
-              <h1 class="brand-color">Stay updated - Join our newsletter</h1>
-            </div>
-            <div class="uk-width-medium-6-10 uk-container-center">
-              <!-- Begin MailChimp Signup Form -->
-              <div id="mc_embed_signup">
-              
-                <form action="//uikonf.us9.list-manage.com/subscribe/post?u=08d7d9a7a55f501920eb76453&amp;id=d3f17105cf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate uk-form uk-text-center" target="_blank" novalidate>
-                  <fieldset data-uk-margin>
-                    <div id="mc_embed_signup_scroll">
-                                    
-                      <input  placeholder="Your E-mail" class="uk-form-large uk-form-width-medium required email" type="email" value="" name="EMAIL" id="mce-EMAIL">
-                       <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn uk-button-large">Subscribe</button>
 
-                      <div id="mce-responses" class="clear">
-                        <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"></div>
-                      </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+{% capture newsletter_content %}
+  <div class="uk-width-medium-6-10 uk-container-center">
 
-                        <div style="position: fixed; left: -50000px;" aria-hidden="true"><input type="text" name="b_08d7d9a7a55f501920eb76453_d3f17105cf" tabindex="-1" value=""></div>
+  <!-- Begin MailChimp Signup Form -->
+  <div id="mc_embed_signup">
+  
+    <form action="//uikonf.us9.list-manage.com/subscribe/post?u=08d7d9a7a55f501920eb76453&amp;id=d3f17105cf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate uk-form uk-text-center" target="_blank" novalidate>
+      <fieldset data-uk-margin>
+        <div id="mc_embed_signup_scroll">
+                        
+          <input  placeholder="Your E-mail" class="uk-form-large uk-form-width-medium required email" type="email" value="" name="EMAIL" id="mce-EMAIL">
+           <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn uk-button-large">Subscribe</button>
 
-                        </div>
-                    </fieldset>
-                </form>
+          <div id="mce-responses" class="clear">
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+          </div>    
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 
-              </div>
-
-              <!--End mc_embed_signup-->
-
-              <p class="uk-text-center">Get in touch at <a href="https://twitter.com/uikonf">@uikonf</a> or 
-              <script type="text/javascript">
-                  <!--
-                  var name = "questions";
-                  var domain = "uikonf.com";
-                  document.write('<a class="email" href=\"mailto:' + name + '@' + domain + '\">');
-                  document.write(name + '@' + domain + '</a>');
-                  // -->
-
-              </script>
-              </p>
-            </div>
-          </div>
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_08d7d9a7a55f501920eb76453_d3f17105cf" tabindex="-1" value=""></div>
         </div>
-      </div>
-    </div>
+      </fieldset>
+    </form>
   </div>
-</div>
+
+  <!--End mc_embed_signup-->
+
+  <p class="uk-text-center">Get in touch at <a href="https://twitter.com/uikonf">@uikonf</a> or 
+  <script type="text/javascript">
+      var name = "questions";
+      var domain = "uikonf.com";
+      document.write('<a class="email" href=\"mailto:' + name + '@' + domain + '\">');
+      document.write(name + '@' + domain + '</a>');
+  </script>
+  </p>
+  </div>
+{% endcapture %}
+{% include content-block.md topShape="newsletter backshape grey-color" title="Stay updated - Join our newsletter" content=newsletter_content %}
+
 
 <footer class="site-footer">
   <div class="straight light-grey">
