add terms and conditions, fix footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,6 @@
 
 {% capture newsletter_content %}
   <div class="uk-width-medium-6-10 uk-container-center">
-<style type="text/css">
-	#mc-embedded-subscribe-form input[type=checkbox]{display: inline; width: auto;margin-right: 10px;}
-	#mergeRow-gdpr {margin-top: 20px;}
-	#mergeRow-gdpr fieldset label {font-weight: normal;}
-	#mc-embedded-subscribe-form .mc_fieldset{border:none;min-height: 0px;padding-bottom:0px;}
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
   
@@ -54,7 +49,8 @@
         <div class="uk-width-1-1 uk-margin-large-top uk-text-center">
 			<p><small><a href="{{ site.baseurl }}/imprint">Imprint</a></small> | 
       	  	   <small><a href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a></small> | 
-      	  	   <small><a href="{{ site.baseurl }}/coc/">Code of Conduct</a></small></p>
+      	  	   <small><a href="{{ site.baseurl }}/coc/">Code of Conduct</a></small> | 
+			   <small><a href="{{ site.baseurl }}/terms/">Terms and Conditions</a></small></p>
           	<p><small>Kallenberg & Geithner GbR, Lehmbruckstr. 3, 10245 Berlin </small><br></p>
         </div>        
       </div>
