uk-container-center is not supported

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 
 {% capture newsletter_content %}
-  <div class="uk-width-medium-6-10 uk-container-center">
+  <div class="uk-width-medium-6-10">
 
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
@@ -41,7 +41,7 @@
 
 <footer class="site-footer">
   <div class="straight light-grey">
-    <div class="uk-container uk-container-center">
+    <div class="uk-container">
       <div class="uk-grid">
         <div class="uk-width-1-1 uk-margin-large-top">
 			<p><small><a href="{{ site.baseurl }}/imprint">Imprint</a></small></p>
@@ -58,4 +58,4 @@
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/components/uikit/js/uikit.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/static/js/scripts.js"></script>
-  
+<script src="https://getuikit.com/migrate.min.js"></script>
