--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,9 +11,9 @@ layout: default
 
 <div class="straight">
 	<div class="wrapper">
-		<div class="uk-container uk-container-center">
+		<div class="uk-container">
 			<div class="uk-grid">
-				<div class="uk-width-medium-8-10 uk-container-center">
+				<div class="uk-width-medium-8-10">
 
 					{{ content }}
     			
