--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,11 @@
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
   
-    <form action="//uikonf.us9.list-manage.com/subscribe/post?u=08d7d9a7a55f501920eb76453&amp;id=d3f17105cf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate uk-form uk-text-center" target="_blank" novalidate>
+    <form action="//uikonf.us9.list-manage.com/subscribe/post?u=08d7d9a7a55f501920eb76453&amp;id=d3f17105cf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate uk-text-center" target="_blank" novalidate>
       <fieldset uk-margin>
         <div id="mc_embed_signup_scroll">
                         
-          <input  placeholder="Your E-mail" class="uk-form-large uk-form-width-medium required email" type="email" value="" name="EMAIL" id="mce-EMAIL">
+          <input  placeholder="Your E-mail" class="uk-form-large-width-medium required email" type="email" value="" name="EMAIL" id="mce-EMAIL">
            <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn uk-button-large">Subscribe</button>
 
           <div id="mce-responses" class="clear">
