--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,7 +13,7 @@ layout: default
 	<div class="wrapper">
 		<div class="uk-container">
 			<div class="uk-grid">
-				<div class="uk-width-medium-8-10">
+				<div class="uk-width-8-10@m">
 
 					{{ content }}
     			
