--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 
 {% capture newsletter_content %}
-  <div class="uk-width-medium-6-10">
+  <div class="uk-width-6-10@m">
 
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
