--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
 
           <ul class="uk-navbar-nav uk-visible@s uk-navbar-right">
             <li>
-                <a uk-toggle="target: #my-id"><i class="uk-icon-bars"></i></a>
+                <a uk-toggle="target: #my-id"><i uk-icon="icon: menu"></i></a>
             </li>
           </ul>
         </div>
