mobile navigation visibiity

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
         </div>
     </nav>
     <div id="my-id" uk-offcanvas>
-        <div class="uk-offcanvas-bar" uk-offcanvas="flip:true">
+        <div class="uk-offcanvas-bar">
           <ul  class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav>
   			{% assign pages = site.pages | where:"includeInNavigation",1 %}
               {% for my_page in pages %}
