--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="uk-container">
-    <nav class="uk-navbar uk-margin-large-bottom">
+    <nav class="uk-navbar">
         <div class="uk-navbar-left">
             <a class="uk-logo uk-navbar-item" href="{{ site.baseurl }}/">
               <img src="{{ site.baseurl }}/static/images/Logo.png" alt="logo UIKonf">
