--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
 
           <ul class="uk-navbar-nav uk-hidden@m uk-navbar-right">
             <li>
-                <a uk-toggle="target: #my-id"><i uk-icon="icon: menu"></i></a>
+                <a uk-toggle="target: #my-id"><i uk-navbar-toggle-icon></i></a>
             </li>
           </ul>
         </div>
