menu from the right

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
           </ul>
         </div>
     </nav>
-    <div id="my-id" uk-offcanvas>
+    <div id="my-id" uk-offcanvas="flip: true">
         <div class="uk-offcanvas-bar">
           <ul  class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav>
   			{% assign pages = site.pages | where:"includeInNavigation",1 %}
