update footer, fix home page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,12 +46,14 @@
   <div class="straight light-grey">
     <div class="uk-container uk-container-center">
       <div class="uk-grid">
-        <div class="uk-width-1-1 uk-margin-large-top uk-text-center">
-			<p><small><a href="{{ site.baseurl }}/imprint">Imprint</a></small> | 
-      	  	   <small><a href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a></small> | 
-      	  	   <small><a href="{{ site.baseurl }}/coc/">Code of Conduct</a></small> | 
-			   <small><a href="{{ site.baseurl }}/terms/">Terms and Conditions</a></small></p>
-          	<p><small>Kallenberg & Geithner GbR, Lehmbruckstr. 3, 10245 Berlin </small><br></p>
+        <div class="uk-width-1-1 uk-margin-large-top uk-text-center">	
+			<p>
+				<small><a href="{{ site.baseurl }}/terms/">Terms &amp; Conditions</a></small> |
+				<small><a href="{{ site.baseurl }}/imprint">Imprint</a></small> | 
+      	  	   	<small><a href="{{ site.baseurl }}/privacy-policy">Privacy Policy</a></small> 
+			</p> 
+    	  	<p><small><a href="{{ site.baseurl }}/coc/">Code of Conduct</a></small></p>   
+          	<p><small>Kallenberg & Geithner GbR, Lehmbruckstr. 3, 10245 Berlin </small></p>
         </div>        
       </div>
     </div>
