--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <nav class="uk-navbar">
         <div class="uk-navbar-left">
             <a class="uk-logo uk-navbar-item" href="{{ site.baseurl }}/">
-              <img src="{{ site.baseurl }}/static/images/Logo.png" alt="logo UIKonf">
+              <img src="{{ site.baseurl }}/static/images/uikonf-logo.svg" height="50" width="50" alt="UIKonf logo">
             </a>
         </div>
         <div class="uk-navbar-right">
