--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -21,7 +21,8 @@ a, .btn, button, a img {
 } 
 
 h1,h2,h3,h4,h5,h6 {
-	font-family: $alternate-font-stack;
+	font-family: $header-font-family;
+	font-weight: $header-font-weight;
 
 	&.brand-color {
 		color: $brand-color !important;
@@ -30,6 +31,7 @@ h1,h2,h3,h4,h5,h6 {
 
 h1, .title-section {
 	padding: 30px 0;
+	text-transform: uppercase;
 }
 
 h2, .title-section {
