remove custom shapes from the blocks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
   </p>
   </div>
 {% endcapture %}
-{% include content-block.md topShape="newsletter backshape grey-color" title="Stay updated - Join our newsletter" content=newsletter_content %}
+{% include content-block.md title="Stay updated - Join our newsletter" content=newsletter_content %}
 
 
 
