header and navigation styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,10 @@
 
     {% include newsletter.html %}
 
+    <iframe
+  src='https://api.mapbox.com/styles/v1/mapbox/streets-v11.html?title=true&zoomwheel=false&access_token=pk.eyJ1Ijoic2FiaW5lLXVpa29uZiIsImEiOiJjamVuNGFjeHY0bzNiMndvM245NzM4aHp2In0.mEFZQQ-3Qhh2JudtqJ64RQ#15/37.771/-122.436'>
+</iframe>  
+
     {% include footer.html %}
 
   </body>
