--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 
-<footer class="site-footer brand-color">
+<footer class="site-footer brand-color-background">
     <div class="uk-container">
       <div class="uk-grid uk-margin-large-top">
         <div class="uk-width-1-1@s uk-width-1-3@m uk-margin-large-bottom" uk-grid>
