fix map loading

--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,6 +1,6 @@
 
 {% capture newsletter_content %}
-<div class="uk-width-6-10@m">
+<div class="uk-width-6-10@m uk-margin-medium-bottom">
 
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
