--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -156,3 +156,12 @@ span {
 		color: $mytaxi-color !important;
 	}
 }
+
+#map {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 640px;
+}
