header for the start page

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,9 @@ layout: default
 defaultHeaderImage: uikonf_2020_hero_image.jpg
 defaultHeaderDescription: UIKonf is an independent conference for serious iOS developers
 ---
+
+{% include header.html %}
+
 {% assign headerImage = page.headerImage | default: layout.defaultHeaderImage %}
 {% assign headerTitle = page.headerTitle | default: page.title %}
 {% assign headerDescription = page.headerDescription | default: layout.defaultHeaderDescription %}
