--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -100,20 +100,14 @@ form {
 	text-align: center;
 	position: absolute;
 	top: 80px;
-	background: rgba(0,0,0,0.5);
-	padding: 40px;
-	border-radius: 16px;
 	a.btn {
 		display: block;
-		margin: 40px 0 10px;
-		color: white;
-		border-color: white;
+		background-color: $brand-color;
 		font-size: 140%;
 		padding: 6px 0;
 
 		&:hover, &:focus {
 			text-decoration: none;
-			border-color: $brand-color;
 		}
 	}
 	h1, p, a {
