--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -1,3 +1,8 @@
+html {
+	-webkit-font-smoothing: antialiased;
+	text-rendering: optimizeLegibility;
+}
+
 body {
     font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
     color: $text-color;
