update button styling

--- a/_includes/location.html
+++ b/_includes/location.html
@@ -5,8 +5,8 @@
             <br/>Holzmarktstr. 33,
             <br/>10243 Berlin</p>
       </div>
-      <div class="uk-margin-large-top">
-          <div id='map'></div>
+      <div class="uk-margin-large-top uk-position-relative">
+          <div id="map"></div>
       </div>
       
       <script>
