--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -14,7 +14,7 @@
             <p>We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
         </small></div>
           <p class="uk-text-center">Get in touch at <a href="https://twitter.com/uikonf">@uikonf</a> or <a href="mail:questions@uikonf.com">questions@uikonf.com</a></p>
-          <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn uk-button-large">Subscribe</button>
+          <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn">Subscribe</button>
 
           <div id="mce-responses" class="clear">
             <div class="response" id="mce-error-response" style="display:none"></div>
