--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@
 // Our variables
 $header-font-family: "Poppins", sans-serif;
 $base-font-family: "Muli", sans-serif;
-$base-font-size:   18px;
+$base-font-size:   14px;
 $base-font-weight: 400;
 $header-font-weight: 600;
 $small-font-size:  $base-font-size * 0.75;
@@ -22,6 +22,8 @@ $light-text-color: rgba(74,74,74, 0.7);
 
 $background-color: #fff;
 $brand-color:      #3399FF;
+$brand-color-dark: #0368CE;
+$white-color:      #fff;
 $mytaxi-color:     #fdc300;
 
 $light-grey: 		#F5F5F5;
