--- a/_includes/workshop.html
+++ b/_includes/workshop.html
@@ -9,7 +9,7 @@
 				
 		{{ include.workshop.content }}
 		{% if include.workshop.tickets %}
-			<p style="margin:30px 0px;"><a class="btn uk-button-large" style="padding:20px; text-decoration: none;" href="{{ include.workshop.tickets }}" target="_blank">Book a Ticket</a></p>
+			<p style="margin:30px 0px;"><a class="btn" href="{{ include.workshop.tickets }}" target="_blank">Book a Ticket</a></p>
 		{% endif %}
 	{% endcapture %}
 
