--- a/_sass/_button.scss
+++ b/_sass/_button.scss
@@ -1,15 +1,19 @@
 
 button, li a.btn, a.btn {
-	border: 3px solid $brand-color;
-	border-radius: 40px;
+	text-transform: uppercase;
 	cursor: pointer;
-	background: transparent;
-	color: $brand-color;
+	border: 2px solid $brand-color;
+	border-radius: 58px;
+	padding: 20px 52px;
+	background: $brand-color;
+	color: #fff;
+	text-decoration: none;
+	font-weight: 600;
 
 	&:hover, &:focus {
 		cursor: pointer;
-		border: 3px solid $brand-color;
-		background: $brand-color;
+		background: $brand-color-dark;
+		border-color: $brand-color-dark;
 		color: #fff;
 	}
 }
