--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -67,6 +67,11 @@ form {
 	}
 }
 
+.text-larger {
+	font-size: 16px;
+	line-height: 26px;
+}
+
 .archive-list {
 	.author-post {
 		margin-top: 15px;
