--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -72,6 +72,15 @@ form {
 	line-height: 26px;
 }
 
+.sponsor-logo {
+	background-size: contain;
+	background-position: center center;
+	background-repeat: no-repeat;
+	height: 96px;
+	width: 80%;
+	margin: auto;
+}
+
 .archive-list {
 	.author-post {
 		margin-top: 15px;
