--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -9,17 +9,17 @@
         <div id="mc_embed_signup_scroll">
                         
           <input placeholder="Your E-mail" class="uk-input uk-form-large uk-form-width-medium uk-text-center uk-width-1-2@m required email" type="email" value="" name="EMAIL" id="mce-EMAIL">
-          <div style="margin-top: 10px;"><small>
+          <div class="uk-text-left">
             <p>UIKonf will use your email to provide updates about upcoming UIKonf events. You can change your mind at any time by clicking the unsubscribe link in the footer of any email you receive from us, or by contacting us at <a href="mailto:questions@uikonf.com">questions@uikonf.com</a>. By clicking below, you agree that we may process your information in accordance with our <a href="{{ site.baseurl }}/privacy-policy">privacy policy</a>.</p>
             <p>We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/" target="_blank">Learn more about Mailchimp's privacy practices here.</a></p>
         </small></div>
-          <p class="uk-text-center">Get in touch at <a href="https://twitter.com/uikonf">@uikonf</a> or <a href="mail:questions@uikonf.com">questions@uikonf.com</a></p>
-          <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn">Subscribe</button>
-
+        <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="button btn">Subscribe</button>
+        
           <div id="mce-responses" class="clear">
             <div class="response" id="mce-error-response" style="display:none"></div>
             <div class="response" id="mce-success-response" style="display:none"></div>
           </div>    
+          <p class="uk-text-center">Get in touch at <a href="https://twitter.com/uikonf">@uikonf</a> or <a href="mail:questions@uikonf.com">questions@uikonf.com</a></p>
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_08d7d9a7a55f501920eb76453_d3f17105cf" tabindex="-1" value=""></div>
         </div>
