subscription and location updated

--- a/_includes/location.html
+++ b/_includes/location.html
@@ -1,15 +1,19 @@
-<div class="uk-container">
+<div class="light-grey">
+  <div class="uk-container">
     <h2 class="uk-text-center">Location</h2>
     <div class="uk-width-1-1 uk-margin-large-bottom uk-text-center">
         <p>RADIALSYSTEM V Berlin,<br>
             Holzmarktstr. 33,<br>
             10243 Berlin<br>
-            <a href="http://maps.apple.com/?q=Radialsystem+V">Apple Maps</a> | <a href="https://www.google.com/maps/search/?api=1&query=Radialsystem+V">Google Maps</a>
+            <a href="http://maps.apple.com/?q=Radialsystem+V">Apple Maps</a> | <a href="https://www.google.com/maps/search/?api=1&query=Radialsystem+V" target="_blank">Google Maps</a>
           </p>
     </div>
   </div>
-  <div class="uk-height-medium uk-background-cover" data-src="/static/images/uikonf_map.png" uk-img></div>
-    <div class="uk-text-center">
-      © <a href='https://www.mapbox.com/about/maps/'>Mapbox</a> © <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a> <strong><a href='https://www.mapbox.com/map-feedback/' target='_blank'>Improve this map</a></strong>
-    </div>
+  <div class="uk-height-large uk-background-cover uk-position-relative" data-src="/static/images/uikonf_map.png" uk-img>
+    <div class="uk-text-center uk-overlay uk-position-bottom">
+        © <a href='https://www.mapbox.com/about/maps/'>Mapbox</a> © <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a> <strong><a href='https://www.mapbox.com/map-feedback/' target='_blank'>Improve this map</a></strong>
+      </div>
   </div>
+
+  </div>
+</div>
