--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,7 @@ $light-text-color: rgba(74,74,74, 0.7);
 $background-color: #fff;
 $brand-color:      #3399FF;
 $brand-color-dark: #0368CE;
+$brand-color-light: #BCE0FD;
 $white-color:      #fff;
 $mytaxi-color:     #fdc300;
 
