--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -62,10 +62,19 @@ a img:hover {
 }
 
 form {
-	input[type="text"], input[type="email"], button {
-		border-radius: 40px;
+	input[type="text"], input[type="email"] {
+		border-color: $brand-color-light;
+		border-radius: 4px;
+		color: $brand-color-dark !important;
 	}
+
+	::placeholder {
+		color: $brand-color-light !important;
+		opacity: 1;
+	}
+
 }
+
 
 .text-larger {
 	font-size: 16px;
@@ -77,7 +86,7 @@ form {
 	background-position: center center;
 	background-repeat: no-repeat;
 	height: 96px;
-	width: 80%;
+	width: 100%;
 	margin: auto;
 }
 
