all includes should be html

--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -29,4 +29,4 @@
   <!--End mc_embed_signup-->  
 </div>
 {% endcapture %}
-{% include content-block.md title="Stay updated - Join our newsletter" content=newsletter_content %}
+{% include content-block.html title="Stay updated - Join our newsletter" content=newsletter_content %}
