--- a/_includes/workshop.html
+++ b/_includes/workshop.html
@@ -13,4 +13,4 @@
 		{% endif %}
 	{% endcapture %}
 
-	{% include 1-2-image-content-block.md anchor=include.workshop.anchor image=include.workshop.image imageAlt= include.workshop.title imageTitle=include.workshop.shortTitle link=include.workshop.twitter content=workshop_content %}
+	{% include 1-2-image-content-block.html anchor=include.workshop.anchor image=include.workshop.image imageAlt= include.workshop.title imageTitle=include.workshop.shortTitle link=include.workshop.twitter content=workshop_content %}
