--- a/_layouts/videos.html
+++ b/_layouts/videos.html
@@ -30,4 +30,4 @@ layout: page
 			      	</div>
 			    
 {% endcapture %}
-{% include content-block.md content=video_content %}
+{% include content-block.html content=video_content %}
