--- a/_includes/person.html
+++ b/_includes/person.html
@@ -1,11 +1,16 @@
- <figure class="uk-transition-toggle">
-    <div class="uk-border-circle uk-inline-clip">
-        <a href="{{ include.link }}"><div class="uk-transition-scale-up person-photo" style="background-image: url('/static/images/{{ include.image }}')"></div></a>
-    </div>
- </figure>
-<p class="uk-text-center text-larger"><b>{{ include.title }}</b>
-{% if include.description %}
-    <br/>
-    <i>{{ include.description }}</i>
-{% endif %}
-</p>
+<div>
+    <figure class="uk-transition-toggle">
+        <div class="uk-border-circle uk-inline-clip">
+            <a href="{{ include.link }}">
+                <div class="uk-transition-scale-up person-photo"
+                    style="background-image: url('/static/images/{{ include.image }}')"></div>
+            </a>
+        </div>
+    </figure>
+    <p class="uk-text-center text-larger"><b>{{ include.title }}</b>
+        {% if include.description %}
+        <br />
+        <i>{{ include.description }}</i>
+        {% endif %}
+    </p>
+</div>
