--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -14,7 +14,8 @@ layout: default
     </div>
 </div>
 
-{% for section in page.sections %}
+{% assign page_sections = page.sections | where: "enabled", true %}
+{% for section in page_sections %}
 {% case section.id %}
 
 {% when "introduction" %}
@@ -65,50 +66,51 @@ layout: default
             </div>
         </div>
     </div>
+</div>
 
 
-    {% when "sponsors" %}
+{% when "sponsors" %}
 
-    <div class="uk-section" id="{{ section.id}}">
-        <div class="uk-container">
-            <h2 class="uk-text-center">{{ section.headline }}</h2>
-            {{ section.text | markdownify }}
-            <div class="uk-text-center uk-grid uk-flex-between uk-child-width-1-3@m uk-margin-large-bottom" uk-grid>
-                {% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
-                {% for sponsor in activeSponsors %}
-                <div class="">
-                    {% include sponsor.html content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt%}
-                </div>
-                {% endfor %}
-                {% endif %}
+<div class="uk-section" id="{{ section.id}}">
+    <div class="uk-container">
+        <h2 class="uk-text-center">{{ section.headline }}</h2>
+        {{ section.text | markdownify }}
+        <div class="uk-text-center uk-grid uk-flex-between uk-child-width-1-3@m uk-margin-large-bottom" uk-grid>
+            {% assign activeSponsors = site.sponsors | where:"active",1 %} {% if activeSponsors.size > 0 %}
+            {% for sponsor in activeSponsors %}
+            <div class="">
+                {% include sponsor.html content=sponsor.content image=sponsor.image anchor=sponsor.anchor image-alt=sponsor.image-alt%}
             </div>
+            {% endfor %}
+            {% endif %}
         </div>
     </div>
+</div>
 
 
-    {% when "social-events" %}
+{% when "social-events" %}
 
-    <div class="uk-section light-grey" id="{{ section.id}}">
-        <div class="uk-container">
-            <h2 class="uk-text-center">{{ section.headline }}</h2>
-            {{ section.text | markdownify }}
-            <div class="uk-text-center uk-grid uk-flex-center uk-child-width-1-4@m uk-child-width-1-1@s uk-margin-large-bottom"
-                uk-grid>
-                {% assign activeEvents = site.events | where:"active",1 %}
+<div class="uk-section light-grey" id="{{ section.id}}">
+    <div class="uk-container">
+        <h2 class="uk-text-center">{{ section.headline }}</h2>
+        {{ section.text | markdownify }}
+        <div class="uk-text-center uk-grid uk-flex-center uk-child-width-1-4@m uk-child-width-1-1@s uk-margin-large-bottom"
+            uk-grid>
+            {% assign activeEvents = site.events | where:"active",1 %}
 
-                {% for event in activeEvents %}
-                <div class="">
-                    {% capture event_link %}/social-events#{{ event.anchor}}{% endcapture %}
-                    {% capture event_image %}/events/{{ event.image}}{% endcapture %}
-                    {% include person.html title=event.title description=event.description image=event_image link=event_link isSmall=0 %}
-                </div>
-                {% endfor %}
+            {% for event in activeEvents %}
+            <div class="">
+                {% capture event_link %}/social-events#{{ event.anchor}}{% endcapture %}
+                {% capture event_image %}/events/{{ event.image}}{% endcapture %}
+                {% include person.html title=event.title description=event.description image=event_image link=event_link isSmall=0 %}
             </div>
+            {% endfor %}
         </div>
     </div>
+</div>
 
-    {% else %}
+{% else %}
 
-    {% endcase %}
+{% endcase %}
 
-    {% endfor %}
+{% endfor %}
