--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -20,11 +20,24 @@ layout: default
 
 {% when "introduction" %}
 
-<div class="" id="{{ section.id}}">
+<div class="uk-margin-bottom" id="{{ section.id}}">
     <div class="uk-container">
-        <div class="uk-grid uk-margin-large-top uk-margin-bottom">
+        <div class="uk-column-1-2@m">
             {{ section.text | markdownify }}
         </div>
+    </div>
+</div>
+
+{% when "tickets" %}
+
+<div class="uk-section" id="{{ section.id}}">
+    <div class="uk-container">
+        <h2 class="uk-text-center">{{ section.headline }}</h2>
+        <div>
+            <script>TitoDevelopmentMode = true</script>
+            <tito-widget event="ultimateconf/2013"></tito-widget>
+        </div>
+        {{ section.text | markdownify }}
     </div>
 </div>
 
@@ -34,16 +47,6 @@ layout: default
     <div class="uk-container">
         <h2 class="uk-text-center">{{ section.headline }}</h2>
         {% include schedule.html context="home" %}
-    </div>
-</div>
-
-{% when "tickets" %}
-
-<div class="uk-section" id="{{ section.id}}">
-    <div class="uk-container">
-        <h2 class="uk-text-center">{{ section.headline }}</h2>
-        <div>todo: Widget comes here</div>
-        {{ section.text | markdownify }}
     </div>
 </div>
 
