--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -56,9 +56,8 @@ layout: default
     <div class="uk-container">
         <h2 class="uk-text-center">{{ section.headline }}</h2>
         {{ section.text | markdownify }}
-        <div class="">
-            <div class="uk-width-2-3@m uk-grid uk-flex-center uk-child-width-1-3@m uk-child-width-1-1@s uk-margin-medium-top uk-margin-medium-bottom"
-                style="margin-left: auto; margin-right: auto;">
+        <div class="uk-container uk-width-2-3@m">
+            <div class="uk-grid uk-flex-center uk-child-width-1-3@m uk-child-width-1-1@s uk-margin-medium-top uk-margin-medium-bottom">
                 {% for speaker in site.speakers %}
                 <div class="uk-margin-bottom uk-text-center">
                     {% capture speaker_link %}/speakers#{{ speaker.anchor}}{% endcapture %}
