add ids to the sections

--- a/_includes/location.html
+++ b/_includes/location.html
@@ -1,16 +1,17 @@
-<div class="light-grey">
+<div class="light-grey" id="location">
   <div class="uk-height-large uk-background-cover uk-position-relative" data-src="/static/images/uikonf_map.png" uk-img>
     <div class="uk-position-top-center uk-margin-top uk-card uk-card-body uk-card-default">
-        <p>RADIALSYSTEM V Berlin,<br>
-          Holzmarktstr. 33,<br>
-          10243 Berlin<br>
-          <a href="http://maps.apple.com/?q=Radialsystem+V">Apple Maps</a> | <a href="https://www.google.com/maps/search/?api=1&query=Radialsystem+V" target="_blank">Google Maps</a>
-        </p>
-      </div>
+      <p>RADIALSYSTEM V Berlin,<br>
+        Holzmarktstr. 33,<br>
+        10243 Berlin<br>
+        <a href="http://maps.apple.com/?q=Radialsystem+V">Apple Maps</a> | <a
+          href="https://www.google.com/maps/search/?api=1&query=Radialsystem+V" target="_blank">Google Maps</a>
+      </p>
+    </div>
     <div class="uk-text-center uk-overlay uk-position-bottom">
-        © <a href='https://www.mapbox.com/about/maps/'>Mapbox</a> © <a href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a> <strong><a href='https://www.mapbox.com/map-feedback/' target='_blank'>Improve this map</a></strong>
-      </div>
-  </div>
-
+      © <a href='https://www.mapbox.com/about/maps/'>Mapbox</a> © <a
+        href='http://www.openstreetmap.org/copyright'>OpenStreetMap</a> <strong><a
+          href='https://www.mapbox.com/map-feedback/' target='_blank'>Improve this map</a></strong>
+    </div>
   </div>
 </div>
