--- a/_layouts/landing-page.html
+++ b/_layouts/landing-page.html
@@ -20,7 +20,7 @@ layout: default
 
 {% when "introduction" %}
 
-<div class="uk-margin-bottom" id="{{ section.id}}">
+<div class="uk-margin-top uk-margin-bottom" id="{{ section.id}}">
     <div class="uk-container">
         <div class="uk-column-1-2@m">
             {{ section.text | markdownify }}
