--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,4 +1,4 @@
-<div class="uk-section" id="location">
+<div class="uk-section" id="newsletter">
   <!-- Begin MailChimp Signup Form -->
   <div id="mc_embed_signup">
     <h2 class="uk-text-center">Stay updated - Join our newsletter</h2>
