the footer structure differs

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,4 +20,8 @@ defaultHeaderDescription: UIKonf is an independent conference for serious iOS de
 	</div>
 </div>
 
+<div class="light-grey">
+	{% include newsletter.html %}
+</div>
+
 
