--- a/_includes/sponsor.html
+++ b/_includes/sponsor.html
@@ -1,4 +1,7 @@
-<div class="uk-margin-bottom">
+<div class="uk-margin-bottom" id="sponsor-{{ include.anchor }}">
     <div class="sponsor-logo uk-width-1-1@s" data-src="/static/images/{{ include.image }}" uk-img>
+    </div>
+    <div uk-drop>
+            <div class="uk-card uk-card-body uk-card-default uk-text-left">{{ include.content }}</div>
     </div>
 </div>
