--- a/_includes/workshop.html
+++ b/_includes/workshop.html
@@ -1,8 +1,10 @@
-<div class="uk-section" id="{{ include.workshop.anchor }}">
+<div class="uk-section uk-padding-remove-top" id="{{ include.workshop.anchor }}">
 	<h3>{{ include.workshop.title }}</h3>
-	<div>
+	<div class="uk-grid">
 		{% for presenter in include.workshop.presenters %}
-		{% include person.html title=presenter.name image=presenter.image link=presenter.twitter isSmall=0 %}
+		<div class="uk-width-1-1@s uk-width-auto@m uk-text-center uk-margin-bottom">
+			{% include person.html title=presenter.name image=presenter.image link=presenter.twitter isSmall=0 %}
+		</div>
 		{% endfor %}
 	</div>
 	<p>Presenter: {{ include.workshop.presenter }}<br />
@@ -10,13 +12,16 @@
 		Location: {{ include.workshop.location }}<br />
 		Time: {{ include.workshop.time }}<br />
 		Duration: {{ include.workshop.duration }}<br />
-		Fee: {{ include.workshop.fee }}</p>
-
-	{{ include.workshop.content }}
-	{% if include.workshop.tickets %}
-	<p style="margin:30px 0px;">
-		<a class="btn" href="{{ include.workshop.tickets }}" target="_blank">Book a Ticket</a>
+		Fee: {{ include.workshop.fee }}
 	</p>
+	<div class="uk-margin-large-bottom">
+		{{ include.workshop.content }}
+	</div>
+
+	{% if include.workshop.tickets %}
+	<div class="uk-margin-top">
+		<a class="btn" href="{{ include.workshop.tickets }}" target="_blank">Book a Ticket</a>
+	</div>
 	{% endif %}
 
 </div>
